--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "main": "./server/bin.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/asapach/peerflix-server.git"
+    "url": "https://github.com/riya0071/torrent.git"
   },
   "keywords": [
     "bittorrent",
